2016-03-08, S3QL 2.17

  * The internal file system revision has changed. File systems
    created with S3QL 2.17 or newer are not compatible with prior S3QL
    versions. To update an existing file system to the newest
    revision, use the `s3qladm upgrade` command.

  * Due to a bug in the FUSE kernel module
    (cf. https://github.com/libfuse/libfuse/issues/23) S3QL does not
    (and did not) honor the write restriction bit. This limitation is
    now documented. (It is unknown if the same problem exists when
    running under BSD or OS-X).

  * S3QL now honors the setgid bit on directories (as opposed to just
    storing them).

  * The `s3qlstat` command now accepts a --raw option to inhibit
    pretty-printing of sizes.

  * The `s3qlctrl log` command is now working again.

  * The `s3qlctrl cachesize` command is now working again.

  * The s3 backend now supports the "infrequent access" storage class
    (cf. https://aws.amazon.com/s3/storage-classes/)

  * The 's3qlstat' command now prints more information about cache
    usage, including the number of cache entries and pending object
    removals.

2016-02-23, S3QL 2.16

  * S3QL now supports (and requires) Python-LLFUSE 0.43 or newer
    (but not never than 1.0).

  * S3QL now retries when receiving a "ServiceUnavailable" error from
    an S3 (or compatible) backend.

  * When retrying network requests, the back-off time now includes a
    random factor to avoid accidentally flooding the server with too
    many simultanuous requests.

  * Fixed a problem with fsck.s3ql aborting with a "ConstraintError"
    in some situations.

  * Fixed a problem with fsck.s3ql repeatedly renaming a file in
    /lost+found because it may lack data.

  * In the authinfo2 file, storage urls for the local backend may now
    be specified with a trailing slash.

2015-09-18, S3QL 2.15

  * Fixed a compatibility problem with recent versions of
    Python-LLFUSE (0.41 and newer).
